--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6293Y1QQ8P"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-6293Y1QQ8P');
-    </script>
+      <!-- Google tag (gtag.js) -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-6293Y1QQ8P"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+  
+        gtag('config', 'G-6293Y1QQ8P');
+      </script>
 
 
     <!-- Thank you to Themeforest for this free site template -->
@@ -23,23 +23,25 @@
     <!-- ===============================================-->
     <!-- Primary Meta Tags -->
 
+    <!-- HTML Meta Tags -->
     <title>Kansas City Shooting Victim Support & Memorial Website</title>
-    <meta name="title" content="Kansas City Shooting Victim Support & Memorial Website" />
-    <meta name="description" content="Support and learn about the individuals harmed in the Kansas City Chiefs Super Bowl Parade shooting. Share this site to spread awareness." />
+    <meta name="description" content="Support and learn about the individuals harmed in the Kansas City Chiefs Super Bowl Parade shooting. Share this site to spread awareness.">
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="#" />
-    <meta property="og:title" content="Kansas City Shooting Victim Support & Memorial Website" />
-    <meta property="og:description" content="Support and learn about the individuals harmed in the Kansas City Chiefs Super Bowl Parade shooting. Share this site to spread awareness." />
-    <meta property="og:image" content="preview-card.png" />
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://kansascityshootingmemorial.vercel.app/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Kansas City Shooting Victim Support & Memorial Website">
+    <meta property="og:description" content="Support and learn about the individuals harmed in the Kansas City Chiefs Super Bowl Parade shooting. Share this site to spread awareness.">
+    <meta property="og:image" content="https://opengraph.b-cdn.net/production/documents/890cd777-8abc-475f-b142-2ca3ca028f75.png?token=JQlQ55FMjzY0RKbrRgzgJY1W7LvE_XuwfZqVuX9kRM8&height=558&width=1200&expires=33243950431">
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="preview-card.png" />
-    <meta property="twitter:url" content="#" />
-    <meta property="twitter:title" content="Kansas City Shooting Victim Support & Memorial Website" />
-    <meta property="twitter:description" content="Support and learn about the individuals harmed in the Kansas City Chiefs Super Bowl Parade shooting. Share this site to spread awareness."/>
-    <meta property="twitter:image" content="preview-card.png" />
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="kansascityshootingmemorial.vercel.app">
+    <meta property="twitter:url" content="https://kansascityshootingmemorial.vercel.app/">
+    <meta name="twitter:title" content="Kansas City Shooting Victim Support & Memorial Website">
+    <meta name="twitter:description" content="Support and learn about the individuals harmed in the Kansas City Chiefs Super Bowl Parade shooting. Share this site to spread awareness.">
+    <meta name="twitter:image" content="https://opengraph.b-cdn.net/production/documents/890cd777-8abc-475f-b142-2ca3ca028f75.png?token=JQlQ55FMjzY0RKbrRgzgJY1W7LvE_XuwfZqVuX9kRM8&height=558&width=1200&expires=33243950431">
+
 
     <link rel="shortcut icon" type="image/png" href="favicon.png"/>
 
